--- a/style.css
+++ b/style.css
@@ -320,16 +320,17 @@ nav.show div.icon-close{
 }
 
 #about .image{
+  width: 100%;
   position: relative;
 }
 
 #about .image::before{
   content: '';
-  height: 200%;
+  height:100%;
   width: 100%;
   background: var(--base-color-second);
-  position: relative;
-  top: -9%;
+  position: absolute;
+  top: -20%;
   left: -27%;
   z-index: 0;
 }
@@ -350,6 +351,7 @@ nav.show div.icon-close{
 /*------SERVICES---------*/
 .cards grid{
   gap: 1.5rem;
+  
 }
 
 .card{
@@ -358,14 +360,14 @@ nav.show div.icon-close{
   border-bottom: 0.25rem solid var(--base-color);
   border-radius: .25rem .25rem 0 0;
   text-align: center;
-  cursor: pointer;
-  
-}
-.card i, h3{
-  transition: 0.6s;
+  cursor: pointer; 
 }
 
- .card :hover{ 
+ .card:hover{
+  background: var(--base-color);
+  border-radius: .25rem .25rem 0 0;
+  text-align: center;
+  cursor: pointer;
   transform: translateY(-10px);
 }
 
@@ -374,6 +376,14 @@ nav.show div.icon-close{
   margin-bottom: 1.5rem;
   font-size:5rem;
   color: var(--base-color);
+}
+
+.card:hover i{
+  color: var(--base-color-second);
+}
+
+.card:hover h3{
+  color: var(--body-color);
 }
 
 .card .title {
@@ -583,7 +593,7 @@ footer .social a:hover{
 
   }
   #home .image{
-    width: 60%;
+    width: 100%;
     order: 1;
   }
 
